[metadata]
name = clictest
summary = OpenStack Testing Service
description-file =
    README.rst
author = OpenStack
#author-email = openstack-dev@lists.openstack.org
#home-page = http://docs.openstack.org/developer/glance/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    clictest

[entry_points]
console_scripts =
    clictest-api = clictest.cmd.api:main    

oslo.config.opts =
    clictest.api = clictest.opts:list_api_opts
oslo.config.opts.defaults =
    clictest.api = clictest.common.config:set_cors_middleware_defaults

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = clictest/locale
domain = clictest

[update_catalog]
domain = clictest
output_dir = clictest/locale
input_file = clictest/locale/clictest.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = clictest/locale/clictest.pot

[pbr]
autodoc_tree_index_modules = True